2000-01-31  Gerd Moellmann  <gerd@gnu.org>

	* Makefile.in (dist): Call ./make-dist.

2000-01-24  Dave Love  <fx@gnu.org>

	* configure.in: Remove -G0 from Irix NON_GCC_TEST_OPTIONS.

2000-01-18  gerd  <gerd@dlpx1>

	* configure.in (HAVE_GIF): Check for DGifOpen instead of
	DGifOpenFileName.

2000-01-18  Gerd Moellmann  <gerd@gnu.org>

	* configure.in (HAVE_GIF): Check for DGifOpen instead of
	DGifOpenFileName.

2000-01-11  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (install-arch-indep): Update list of info files to
	be installed.

2000-01-05  Dave Love  <fx@gnu.org>

	* configure.in: Check for jerror.h as well as libjpeg.

2000-01-03  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (install-arch-indep): Install autotype*.  Run
	install-info on autotype and emacs-faq.info.

1999-12-04  Dave Love  <fx@gnu.org>

	* Makefile.in: (install-arch-indep): Depend on `info'.
	(install-strip): Use `install' as sub-make target.

1999-11-23  Ken Raeburn  <raeburn@gnu.org>

	* configure.in: Restore Kerberos code deleted on 1999-05-29 that
	didn't need to be deleted.  Check for the k5crypto library as well
	as the crypto library; MIT Kerberos 1.1 changed the name.

1999-11-18  Dave Love  <fx@gnu.org>

	* configure.in: Fix NON_GNU_CPP for Irix 6 to avoid failing tests.

1999-11-11  Erik Naggum  <erik@naggum.no>

	* configure.in (bitmapdir): Allow for both "bitmaps" directories.

1999-11-08  Dave Love  <fx@gnu.org>

	* configure.in: Fix change for --with-pop default.

1999-11-04  Dave Love  <fx@gnu.org>

	* configure.in: Default to --with-pop.  Change sense of with-gcc
	and with-toolkit-scroll-bars messages to reflect the defaults.

1999-11-01  Gerd Moellmann  <gerd@gnu.org>

	* INSTALL: Mention the Emacs Lisp Reference.

1999-10-27  Noah Friedman  <friedman@splode.com>

	* configure.in: Check for dynamic ptys (/dev/ptmx, /dev/pts/).

1999-10-23  Gerd Moellmann  <gerd@gnu.org>

	* Makefile.in (bootstrap): New target.

1999-10-19  Paul Eggert  <eggert@twinsun.com>
