@@ -1,3 +1,7 @@
+2000-02-01  Gerd Moellmann  <gerd@gnu.org>
+
+	* leim-Makefile.in: New file.
+
 2000-01-31  Gerd Moellmann  <gerd@gnu.org>
 
 	* Makefile.in (dist): Call ./make-dist.
